<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22FFFAF6"
    tools:context=".admin.AdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/adminWelcome"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/chartVisitors"
            android:textColor="#272F64"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChartTempPercent"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.835">

        </com.github.mikephil.charting.charts.BarChart>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textViewTittlePersonas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/personas"
                    android:textColor="#131313"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTittlePorcentaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/porcentaje"
                    android:textColor="#131313"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/textViewTittleFiebre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/noFiebre"
                    android:textColor="#39863C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPersonasSinFiebre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/porcentajeNoFiebre"
                    android:textColor="#39863C"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewPorcentajeSinFiebre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/porcentajeNoFiebre"
                    android:textColor="#39863C"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/textViewTittleNoFiebre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fiebre"
                    android:textColor="#BC3939"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPersonasConFiebre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/porcentajeFiebre"
                    android:textColor="#BC3939"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewPorcentajeConFiebre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/porcentajeFiebre"
                    android:textColor="#BC3939"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_accederVHistorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#63A0D0"
                android:text="@string/listVisitors" />

            <Button
                android:id="@+id/btnSignOutAdmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#63A0D0"
                android:text="@string/signOut" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>