<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/my_info_image"
            android:layout_width="193dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:scaleType="fitXY"
            card_view:srcCompat="@drawable/alert__copy_" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView_nameMall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif"
                android:maxLength="47"
                android:text="@string/mallName"
                android:textAlignment="viewStart"
                android:textColor="#223263"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_visitDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/fecha_hint"
                android:textAllCaps="false"
                android:textColor="#223263"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView_visitTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/hora_hint"
                android:textColor="#223263"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_visitTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif"
                android:text="@string/temperature_hint"
                android:textColor="#BE1E1E"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>