<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22FFFAF6"
    android:backgroundTint="#22FFFAF6"
    tools:context=".visitante.MiHistorialActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_historialTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/listMyVisits"
            android:textColor="#223263"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_MeFromMyHistorial"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="fitCenter"
                tools:src="@drawable/app_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_myNameMisHistorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/userName"
                    android:textColor="#223263"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_myIDMyHistorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/ID_hint"
                    android:textColor="#223263"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/misVisitas"
            android:textColor="#223263"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RecyclerView_myVisits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
            <!-- android:scrollbarAlwaysDrawVerticalTrack="false"-->

    </LinearLayout>
    </ScrollView>
